objects/DynamicQueryHelper__c/DynamicQueryHelper__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DynamicQueryHelper</label>
</CustomObject>