objects/DynamicQueryHelper__c/fields/Active_Products_Condition__c.field-meta.xml
<CustomField>
    <fullName>Active_Products_Condition__c</fullName>
    <label>Active Products Condition</label>
    <type>TextArea</type>
</CustomField>