objects/DynamicQueryHelper__c/fields/ServiceContact_Query__c.field-meta.xml
<CustomField>
    <fullName>ServiceContact_Query__c</fullName>
    <label>ServiceContact Query</label>
    <type>TextArea</type>
</CustomField>