objects/DynamicQueryHelper__c/fields/Without_Active_Product_Condition__c.field-meta.xml
<CustomField>
    <fullName>Without_Active_Product_Condition__c</fullName>
    <label>Without Active Product Condition</label>
    <type>TextArea</type>
</CustomField>